# smart-plug

./: .gitignore  README.md
Firmware/: ESP_Wrkspace.code-workspace  FIRMWARE_EVOLUTION_SUMMARY.md  no_load_offset_20260515_173312.csv  readme.md
Firmware/Calibration/: ade_calibration.py  awgain_cal_20260519_184047.csv  current_cal_20260519_183410.csv  phase_cal_20260519_191258.csv  raw_verification_20260519_181430.csv  voltage_cal_20260519_182219.csv  wh_lsb_cal_20260519_183801.csv
Firmware/ESP_SmartPlug/: CMakeLists.txt
Firmware/ESP_SmartPlug/main/: CMakeLists.txt  Kconfig.projbuild  board_profile.c  board_profile.h  idf_component.yml  main.c  module_ade7953.c  module_ade7953.h  module_baseline_io.c  module_baseline_io.h  module_ble.c  module_ble.h  module_ledstrip.c  module_ledstrip.h  module_mqtt.c  module_mqtt.h  module_nvs.c  module_nvs.h  module_pzem.c  module_pzem.h  module_relay.c  module_relay.h  module_sdcard.c  module_sdcard.h  module_tmp102.c  module_tmp102.h  module_wifi.c  module_wifi.h
Software/: readme.md  requirements.txt
Software/.venv_pc/: pyvenv.cfg
Software/.venv_pc/Scripts/: activate  activate.bat
Software/firmware_patch/: module_mqtt.c
Software/launchers/: README.md  Start-AyceSystem.ps1  create_desktop_shortcut.bat  create_desktop_shortcut.ps1  start_ayce_system.bat  start_ayce_system_hidden.vbs
Software/provisioning/: README.md  provisioner.py
Software/telemetry/: dummyGUI.py  dymmyGUI.py  mosquitto.conf  mqtt_client.py  mqtt_client_updated.py  readme.md  readme_updated.md  smartplug_gui.py  start_gui.bat  start_mosquitto.bat
(+3 files in other folders)
