idf_component_register(SRCS "module_mqtt.c" "main.c"
                    "board_profile.c"
                    "module_relay.c"
                    "module_ledstrip.c"
                    "module_sdcard.c"
                    "module_tmp102.c"
                    "module_ade7953.c"
                    "module_ble.c"
                    "module_wifi.c"
                    "module_nvs.c"
                    INCLUDE_DIRS "."
                    PRIV_REQUIRES led_strip fatfs sdmmc vfs whysaputro__tmp102 bt nvs_flash json esp_wifi driver esp_timer esp_rom mqtt)
